--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -1,9 +1,19 @@
 // Copy Container
 .copy-container{
-	// @extend .clearfix;
-	.wrapper {
-		padding: 4em 0 5em;
-	}
+  position: relative;
+  display: block;
+
+  .film-description {
+    // padding: 4em 0 5em;
+    display: block;
+  }
+}
+
+// Safari Only:
+_::-webkit-full-page-media, _:future, :root {
+  .film-description {
+    margin-top: 200px;
+  }
 }
 
 .copy-social-icons{
